# ai-lyric-video-generator

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  ai_image_generator.py  api_utils.py  app.py  check_models.py  config.py  demo.py  file_manager.py  lyric_video_generator.py  lyrics_segmenter.py  main.py  pyproject.toml  requirements-web.txt  requirements.txt  run.sh  test_image_gen.py  test_lyrics.py  test_video_sync.py  video_assembler.py
ai_generator/: __init__.py  config.py  description_generator.py  director.py  generator.py  image_generator.py  main.py
ai_generator/prompts/: __init__.py  image_description.py  image_generation.py  safety.py  video_concept.py
ai_generator/utils/: __init__.py
docs/: WEB_README.md  gemini_api_guide_for_llms.md  google-genai-guide.md  moviepy_api_guide.md  python_genai_guide.md
examples/: README_image_generation.md  advanced_image_generator.py  ai_image_generator.py  demo.py  gemini_image_generator.py  test_image_generation.py
lib/: README.md  __init__.py  song_utils.py
scripts/: run_web_app.py
src/ai_lyric_video_generator/: config.py  main.py
src/ai_lyric_video_generator/core/: __init__.py  description_generator.py  director.py  image_generator.py  main.py
src/ai_lyric_video_generator/utils/: file_manager.py  song_utils.py  utils.py
src/ai_lyric_video_generator/video/: video_assembler.py
src/ai_lyric_video_generator/web/: __init__.py  migrations.py  routes.py  worker.py
tests/: __init__.py  run_tests.py  test_file_manager.py  test_image_gen.py  test_utils.py
web/: __init__.py  config.py  migrations.py  models.py  routes.py  worker.py
web/templates/: index.html  task_detail.html  video_player.html
(+12 files in other folders)
